# framework-control-native

./: .gitignore  CLEANUP_SUMMARY.md  INSTALLATION_GUIDE.md  INSTALLATION_SUCCESS.md  README.md  README_GITHUB.md  SERVICE_INSTALLATION_COMPLETE.md  build_msi.ps1  build_native.ps1  fast_build.ps1  install_system.ps1  manage.ps1
framework-control-0.4.2/: README.md  TEST_RESULTS.md  build_msi.cmd  build_msi.ps1  build_native.ps1  install.ps1  quick_build.ps1
framework-control-0.4.2/service/: Cargo.toml
framework-control-0.4.2/service/src/: main.rs
framework-control-0.4.2/service/src/cli/: framework_tool_parser.rs  ryzen_adj_parser.rs
framework-control-0.4.2/service/wix/: main.wxs
service/: Cargo.toml  build.rs  build_errors.txt  check_output.txt
service/src/: cli.rs  config.rs  ec.rs  main.rs  main.rs.backup  types.rs  windows_service.rs
service/src/cli/: framework_tool.rs  framework_tool_parser.rs  mod.rs  ryzen_adj.rs  ryzen_adj_parser.rs
service/src/tasks/: fan_curve.rs  power.rs  telemetry.rs
service/src/utils/: fs.rs  github.rs  mod.rs  wget.rs
