[package]
name = "framework-control"
version = "0.4.3"
edition = "2021"
authors = ["Framework Control"]

[[bin]]
name = "framework-control"
path = "src/main.rs"

[build-dependencies]
winres = "0.1"

[dependencies]
# Core async runtime - optimized features only
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "sync", "time", "fs"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"], default-features = false }
serde_json = { version = "1", default-features = false, features = ["std"] }

# Logging - minimal features
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"], default-features = false }

# System info - minimal features
sysinfo = { version = "0.30", default-features = false, features = ["multithread"] }

# Windows Service support
windows-service = { version = "0.7", default-features = false }

# Native GUI - Optimized for performance
eframe = { version = "0.28", default-features = false, features = ["default_fonts", "glow"] }
egui = { version = "0.28", default-features = false }
egui_plot = { version = "0.28", default-features = false }

# Tray Icon
tray-icon = "0.14"

# Framework System Library
framework_lib = { path = "framework-system/framework_lib" }

[profile.release]
opt-level = 3           # Full optimization (changed from "z" for speed)
lto = "thin"            # Link-time optimization for faster builds
codegen-units = 1       # Better optimization (slower build, faster runtime)
strip = true            # Strip symbols for smaller binary
panic = "abort"         # Smaller binary
incremental = false     # Better optimization

[profile.dev]
opt-level = 1           # Some optimization for dev
incremental = true      # Fast rebuilds
debug = false           # No debug symbols
split-debuginfo = "unpacked"  # Faster linking

# Fast release profile for testing
[profile.fast-release]
inherits = "release"
opt-level = 2
codegen-units = 16
lto = "off"

[package.metadata.wix]
eula = false