[package]
name = "framework-control"
version = "0.4.3"
edition = "2021"
authors = ["Framework Control"]

[[bin]]
name = "framework-control"
path = "src/main.rs"

[build-dependencies]
winres = "0.1"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"], default-features = false }

serde = { version = "1", features = ["derive"], default-features = false }
serde_json = { version = "1", default-features = false, features = ["std"] }

eframe = { version = "0.28", default-features = false, features = ["default_fonts", "glow"] }
egui = { version = "0.28", default-features = false }

tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi"] }

chrono = { version = "0.4", default-features = false, features = ["clock"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_Devices_DeviceAndDriverInstallation",
] }

[profile.release]
opt-level = 3           # Full optimization (changed from "z" for speed)
lto = "thin"            # Link-time optimization for faster builds
codegen-units = 1       # Better optimization (slower build, faster runtime)
strip = true            # Strip symbols for smaller binary
panic = "abort"         # Smaller binary
incremental = false     # Better optimization

[profile.dev]
opt-level = 1           # Some optimization for dev
incremental = true      # Fast rebuilds
debug = false           # No debug symbols
split-debuginfo = "unpacked"  # Faster linking

# Fast release profile for testing
[profile.fast-release]
inherits = "release"
opt-level = 2
codegen-units = 16
lto = "off"

[package.metadata.wix]
eula = false