[package]
name = "framework-control"
version = "0.4.3"
edition = "2021"
authors = ["Framework Control"]

[[bin]]
name = "framework-control"
path = "src/main.rs"

[build-dependencies]
winres = "0.1.12"

[dependencies]
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "sync", "time"], default-features = false }
serde = { version = "1.0.228", features = ["derive"], default-features = false }
serde_json = { version = "1.0.145", default-features = false, features = ["std"] }
eframe = { version = "0.33.2", default-features = false, features = ["default_fonts", "glow"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi"] }
image = "0.25"


[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
incremental = false

[profile.dev]
opt-level = 1
incremental = true
debug = false

[package.metadata.wix]
eula = false